@@ -1,0 +1,134 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<refentry id="stdin" xmlns="http://docbook.org/ns/docbook" version="5.0">
+  <!--
+      Header
+  -->
+  <refmeta>
+    <refentrytitle>amanctl</refentrytitle>
+    <manvolnum>8</manvolnum>
+    <refmiscinfo class='source'>June 2017</refmiscinfo>
+    <refmiscinfo class='manual'>Linux Audio Manual</refmiscinfo>
+  </refmeta>
+  <refnamediv>
+    <refname>amanctl</refname>
+    <refpurpose>Monitor and control an Aman server constellation</refpurpose>
+  </refnamediv>
+  <info>
+    <author>
+      <personname>
+	<firstname>Fred</firstname>
+	<surname>Gleason</surname>
+	<email>fredg@paravelsystems.com</email>
+      </personname>
+      <contrib>Application Author</contrib>
+    </author>
+  </info>
+
+  <!--
+      Body
+  -->
+  <refsynopsisdiv id='synopsis'>
+    <cmdsynopsis>
+      <command>amanctl</command>
+      <arg choice='req'><option>--command=</option><replaceable>cmd</replaceable></arg>
+      <arg choice='opt'><option>--system=</option><userinput>A</userinput>|<userinput>B</userinput></arg>
+      <sbr/>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsect1 id='description'><title>Description</title>
+  <para>
+    <command>amanctl</command><manvolnum>8</manvolnum> can be used to monitor
+    and control an Aman server constellation from the command line.
+  </para>
+  </refsect1>
+
+  <refsect1 id='options'><title>Options</title>
+  <variablelist remap='TP'>
+    <varlistentry>
+      <term>
+	<option>--command</option>
+      </term>
+      <listitem>
+	<para>
+	  The action to take. The following values are supported:
+	</para>
+	<variablelist>
+	  <varlistentry>
+	    <term><userinput>GET_STATE</userinput></term>
+	    <listitem>
+	      <para>
+		Print the state of the constellation to standard output.
+	      </para>
+	    </listitem>
+	  </varlistentry>
+	  <varlistentry>
+	    <term><userinput>MAKE_AUDIO_SLAVE</userinput></term>
+	    <listitem>
+	      <para>
+		Attempt to change the Audio state of the specified system
+		to <computeroutput>SLAVE</computeroutput>.
+	      </para>
+	    </listitem>
+	  </varlistentry>
+	  <varlistentry>
+	    <term><userinput>MAKE_AUDIO_IDLE</userinput></term>
+	    <listitem>
+	      <para>
+		Attempt to change the Audio state of the specified system
+		to <computeroutput>IDLE</computeroutput>.
+	      </para>
+	    </listitem>
+	  </varlistentry>
+	  <varlistentry>
+	    <term><userinput>MAKE_DB_IDLE</userinput></term>
+	    <listitem>
+	      <para>
+		Attempt to change the DB state of the specified system
+		to <computeroutput>IDLE</computeroutput>.
+	      </para>
+	    </listitem>
+	  </varlistentry>
+	  <varlistentry>
+	    <term><userinput>MAKE_DB_MASTER</userinput></term>
+	    <listitem>
+	      <para>
+		Attempt to change the DB state of the specified system
+		to <computeroutput>MASTER</computeroutput>.
+	      </para>
+	    </listitem>
+	  </varlistentry>
+	  <varlistentry>
+	    <term><userinput>MAKE_DB_SLAVE</userinput></term>
+	    <listitem>
+	      <para>
+		Attempt to change the DB state of the specified system
+		to <computeroutput>SLAVE</computeroutput>.
+	      </para>
+	    </listitem>
+	  </varlistentry>
+	</variablelist>
+	<para>
+	  The default value is <userinput>GET_STATE</userinput>
+	</para>
+      </listitem>
+    </varlistentry>
+ 
+    <varlistentry>
+      <term>
+	<option>--system=</option><userinput>A</userinput>|<userinput>B</userinput>
+      </term>
+      <listitem>
+	<para>
+	  Specify which of the two servers to apply the operation to. Required
+	  for all commands except <userinput>GET_STATE</userinput>.
+	</para>
+      </listitem>
+    </varlistentry>
+
+  </variablelist>
+</refsect1>
+
+
+</refentry>
+
